--- a/src/output.css
+++ b/src/output.css
@@ -558,10 +558,6 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -581,6 +577,18 @@ video {
 
 .mt-7 {
   margin-top: 1.75rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.ml-7 {
+  margin-left: 1.75rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
 }
 
 .block {
@@ -619,6 +627,10 @@ video {
   height: 10rem;
 }
 
+.h-\[120px\] {
+  height: 120px;
+}
+
 .w-5 {
   width: 1.25rem;
 }
@@ -637,6 +649,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[279px\] {
+  width: 279px;
 }
 
 .rotate-90 {
@@ -664,6 +680,10 @@ video {
 
 .flex-row {
   flex-direction: row;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -700,6 +720,14 @@ video {
   row-gap: 1.25rem;
 }
 
+.gap-y-\[2px\] {
+  row-gap: 2px;
+}
+
+.self-center {
+  align-self: center;
+}
+
 .self-stretch {
   align-self: stretch;
 }
@@ -734,6 +762,10 @@ video {
   background-image: url(./img/bg-3.png);
 }
 
+.bg-\[url\(\.\/img\/bg-4\.png\)\] {
+  background-image: url(./img/bg-4.png);
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -756,6 +788,14 @@ video {
 
 .pt-7 {
   padding-top: 1.75rem;
+}
+
+.pt-11 {
+  padding-top: 2.75rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
 .text-center {
@@ -826,6 +866,10 @@ video {
 
 .leading-\[48px\] {
   line-height: 48px;
+}
+
+.leading-7 {
+  line-height: 1.75rem;
 }
 
 .tracking-\[0\.02em\] {
